fix spacing

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ button {
 }
 
 button:hover {
-    color: #886F88;
+    background-color: #886F88;
 }
 
 .timer {
